--- a/style/styling.css
+++ b/style/styling.css
@@ -11,7 +11,7 @@ body {
 
 
 .giustifica {
-    text-align: justify !important; 
+    text-align: justify; 
 }
 
 h1, h2, h3, h4, h5, h6 {
